[project]
name = "ai-travel"
version = "0.1.0"
description = "A travel planning app powered by AI."
authors = [
    {name = "sachink108",email = "sachink108@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "openai (>=1.108.1,<2.0.0)",
    "authlib (>=1.6.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
